src/pages/styles.module.css
/**
 * Copyright (c) 2017-present, Facebook, Inc.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
}

@media screen and (max-width: 966px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.quickstart {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 1em 0 0 1em;
}

.github {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 1em 1em 0;
}

.buttons-tools-github {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 1em 1em 0 !important;
}

.features {
  align-items: center;
  padding: 2rem 0;
  width: 100%;
  display: flex;
}

.tools {
  align-items: center;
  padding: 2rem 0;
  width: 100%;
  display: flex;
  color: white;
  text-align: center;
  justify-content: center;
  background-color: #263238;
}

.headerImage {
  height: 300px;
  width: 200px;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 1rem 0;
}

.featureImage {
  height: 150px;
  width: 100px;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 1rem 0;
}

.toolImage {
  height: 80px;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 1rem 0;
}

.particles {
  background-color: "#262941";
  z-index: -10;
  position: "absolute";
  width: "100%";
  height: "100%";
  top: 0;
  left: 0;
}

.hero__title {
  z-index: 1 !important;
}

.hero__subtitle {
  z-index: 1 !important;
  color: #a4a9ad !important;
}

.text__gray {
  color: #a4a9ad !important;
}

